# cookiecutter-ds-mini

./: .gitignore  README.md  cookiecutter.json
{{ cookiecutter.project_name }}/: README.md  pyproject.toml
{{ cookiecutter.project_name }}/notebooks/: example.ipynb
{{ cookiecutter.project_name }}/src/{{ cookiecutter.project_slug }}/: utils.py
{{ cookiecutter.project_name }}/tests/: test_utils.py
