[tool.poetry]
name = "{{cookiecutter.project_slug}}"
version = "0.1.0"
description = "{{cookiecutter.project_description}}"
authors = ["{{cookiecutter.author}} <{{cookiecutter.email}}>"]
readme = "README.md"
packages = [{include = "{{cookiecutter.project_slug}}", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"
matplotlib = "^3.8.3"
scikit-learn = "^1.4.1.post1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.4"
pytest = "^8.1.1"
jupyter = "^1.0.0"

[tool.ruff]
target-version = "py312"
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
