[project]
name = "{{cookiecutter.project_slug}}"
version = "0.1.0"
description = "{{cookiecutter.project_description}}"
authors = [
    { name = "{{cookiecutter.author}}", email = "{{cookiecutter.email}}" }
]
readme = "README.md"

requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pytest>=8.3.4",
    "ruff>=0.8.4",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
extend-select = ["E", "F"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
